changed conditions for binding (user-provided)